# solr_toolkit

./: README.md  docker-compose.yml  pyproject.toml
