[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "solr_toolkit"
dynamic = ["version"]
authors = [
  { name="Adam Patterson", email="adam@farar.net" },
]
description = "Solr Toolkit"
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/faranalytics/solr_toolkit.git"
"Bug Tracker" = "https://github.com/faranalytics/solr_toolkit/issues"

[tool.hatch.version]
path = "src/solr_toolkit/__about__.py"